--- a/Source/Website.Extensions/Share/Modules.Controls/Modules.Controls.csproj
+++ b/Source/Website.Extensions/Share/Modules.Controls/Modules.Controls.csproj
@@ -38,6 +38,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="Telerik.Web.UI">
       <HintPath>..\..\..\..\library\Telerik.Web.UI.dll</HintPath>
     </Reference>
