--- a/Source/Website.Extensions/Modules/Modules.MarketingCampaign/Modules.MarketingCampaign.csproj
+++ b/Source/Website.Extensions/Modules/Modules.MarketingCampaign/Modules.MarketingCampaign.csproj
@@ -30,11 +30,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DotNetNuke, Version=8.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Library\DotNetNuke.dll</HintPath>
+    </Reference>
+    <Reference Include="EPPlus">
+      <HintPath>..\..\..\..\Library\EPPlus.dll</HintPath>
+    </Reference>
     <Reference Include="LunarSoft.SqlServerConnector">
       <HintPath>..\..\..\..\library\LunarSoft.SqlServerConnector.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -43,6 +51,9 @@
     <Compile Include="Database\ResultTable.cs" />
     <Compile Include="DataTransfer\ResultData.cs" />
     <Compile Include="Enum\ReportTypeEnum.cs" />
+    <Compile Include="Global\MarketingCampaignBase.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
