Finish User Management Module
- Add Confirm Branch Page
- Add User Request Page

--- a/Source/Website.Extensions/Modules/Modules.UserManagement/Modules.UserManagement.csproj
+++ b/Source/Website.Extensions/Modules/Modules.UserManagement/Modules.UserManagement.csproj
@@ -45,24 +45,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Business\BranchManagerCacheBusiness.cs" />
     <Compile Include="Business\RoleTemplateBusiness.cs" />
     <Compile Include="Business\RoleGroupBusiness.cs" />
     <Compile Include="Business\BranchBusiness.cs" />
     <Compile Include="Business\UserCacheBusiness.cs" />
     <Compile Include="Business\BranchCacheBusiness.cs" />
     <Compile Include="Business\UserBusiness.cs" />
+    <Compile Include="Business\UserRequestBusiness.cs" />
     <Compile Include="DataAccess\RoleTemplateProvider.cs" />
     <Compile Include="DataAccess\RoleGroupProvider.cs" />
     <Compile Include="DataAccess\BranchProvider.cs" />
     <Compile Include="DataAccess\UserProvider.cs" />
+    <Compile Include="DataAccess\UserRequestProvider.cs" />
     <Compile Include="Database\RoleTemplateTable.cs" />
     <Compile Include="Database\RoleGroupTable.cs" />
     <Compile Include="Database\BranchTable.cs" />
+    <Compile Include="Database\UserRequestTable.cs" />
     <Compile Include="Database\UserTable.cs" />
     <Compile Include="DataTransfer\BranchData.cs" />
+    <Compile Include="DataTransfer\BranchManagerData.cs" />
     <Compile Include="DataTransfer\UserData.cs" />
+    <Compile Include="DataTransfer\UserRequestData.cs" />
     <Compile Include="Enum\ConfigEnum.cs" />
     <Compile Include="Enum\FolderEnum.cs" />
+    <Compile Include="Enum\RequestStatusEnum.cs" />
+    <Compile Include="Enum\RequestTypeEnum.cs" />
     <Compile Include="Enum\RoleEnum.cs" />
     <Compile Include="Enum\TemplateEnum.cs" />
     <Compile Include="Global\UserManagementModuleBase.cs">
