Apply Telerik Controls
- Apply RadCombobox, RadGrid to Master Data, Dynamic Report, Module
Management, Cache Management
- Add Encrypt web.config command files

--- a/Source/Website/web.config
+++ b/Source/Website/web.config
@@ -847,4 +847,11 @@
                       compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
         </compilers>
     </system.codedom>
+    <configProtectedData>
+        <providers>
+            <clear/>
+            <remove name="ConnectionEncryptionProvider" />
+            <add name="ConnectionEncryptionProvider" keyContainerName="ConnectionEncryptionKeys" type="System.Configuration.RsaProtectedConfigurationProvider, System.Configuration, Version=2.0.0.0,&#xD;&#xA;                &#xD;&#xA;Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a,&#xD;&#xA; processorArchitecture=MSIL" useMachineContainer="true" />
+        </providers>
+    </configProtectedData>
 </configuration>
