Add Application Cache Data

--- a/Source/Website.Extensions/Modules/Modules.Application/Modules.Application.csproj
+++ b/Source/Website.Extensions/Modules/Modules.Application/Modules.Application.csproj
@@ -54,8 +54,22 @@
     <Compile Include="Business\ApplicationLogBusiness.cs" />
     <Compile Include="Business\CityBusiness.cs" />
     <Compile Include="Business\CityCacheBusiness.cs" />
+    <Compile Include="Business\CompanyBusiness.cs" />
+    <Compile Include="Business\CompanyCacheBusiness.cs" />
+    <Compile Include="Business\ContractTypeBusiness.cs" />
+    <Compile Include="Business\ContractTypeCacheBusiness.cs" />
+    <Compile Include="Business\CorporateEntityTypeBusiness.cs" />
+    <Compile Include="Business\CorporateEntityTypeCacheBusiness.cs" />
+    <Compile Include="Business\CorporateSizeBusiness.cs" />
+    <Compile Include="Business\CorporateSizeCacheBusiness.cs" />
+    <Compile Include="Business\CorporateStatusBusiness.cs" />
+    <Compile Include="Business\CorporateStatusCacheBusiness.cs" />
     <Compile Include="Business\CustomerClassCacheBusiness.cs" />
     <Compile Include="Business\CustomerClassBusiness.cs" />
+    <Compile Include="Business\EducationBusiness.cs" />
+    <Compile Include="Business\EducationCacheBusiness.cs" />
+    <Compile Include="Business\HomeOwnershipBussiness.cs" />
+    <Compile Include="Business\HomeOwnershipCacheBussiness.cs" />
     <Compile Include="Business\LanguageCacheBusiness.cs" />
     <Compile Include="Business\LanguageBusiness.cs" />
     <Compile Include="Business\CountryBusiness.cs" />
@@ -63,15 +77,45 @@
     <Compile Include="Business\IdentityTypeCacheBusiness.cs" />
     <Compile Include="Business\IdentityTypeBusiness.cs" />
     <Compile Include="Business\ApplicationTypeBusiness.cs" />
+    <Compile Include="Business\MaritalStatusBusiness.cs" />
+    <Compile Include="Business\MaritalStatusCacheBusiness.cs" />
+    <Compile Include="Business\OccupationBusiness.cs" />
+    <Compile Include="Business\OccupationCacheBusiness.cs" />
     <Compile Include="Business\PolicyBusiness.cs" />
     <Compile Include="Business\ApplicationTypeCacheBusiness.cs" />
     <Compile Include="Business\PolicyCacheBusiness.cs" />
+    <Compile Include="Business\PositionBusiness.cs" />
+    <Compile Include="Business\PositionCacheBusiness.cs" />
+    <Compile Include="Business\SICBusiness.cs" />
+    <Compile Include="Business\SICCacheBusiness.cs" />
     <Compile Include="Business\StateBusiness.cs" />
     <Compile Include="Business\StateCacheBusiness.cs" />
     <Compile Include="DataAccess\ApplicationFieldProvider.cs" />
     <Compile Include="DataAccess\ApplicationLogProvider.cs" />
+    <Compile Include="DataAccess\CompanyProvider.cs" />
+    <Compile Include="DataAccess\ContractTypeProvider.cs" />
+    <Compile Include="DataAccess\CorporateEntityTypeProvider.cs" />
+    <Compile Include="DataAccess\CorporateSizeProvider.cs" />
+    <Compile Include="DataAccess\CorporateStatusProvider.cs" />
+    <Compile Include="DataAccess\EducationProvider.cs" />
+    <Compile Include="DataAccess\HomeOwnershipProvider.cs" />
+    <Compile Include="DataAccess\MaritalStatusProvider.cs" />
+    <Compile Include="DataAccess\OccupationProvider.cs" />
+    <Compile Include="DataAccess\PositionProvider.cs" />
+    <Compile Include="DataAccess\SICProvider.cs" />
     <Compile Include="Database\ApplicationLogDetailTable.cs" />
     <Compile Include="Database\ApplicationProcessTable.cs" />
+    <Compile Include="Database\CompanyTable.cs" />
+    <Compile Include="Database\ContractTypeTable.cs" />
+    <Compile Include="Database\CorporateEntityTypeTable.cs" />
+    <Compile Include="Database\CorporateSizeTable.cs" />
+    <Compile Include="Database\CorporateStatusTable.cs" />
+    <Compile Include="Database\EducationTable.cs" />
+    <Compile Include="Database\HomeOwnershipTable.cs" />
+    <Compile Include="Database\MaritalStatusTable.cs" />
+    <Compile Include="Database\OccupationTable.cs" />
+    <Compile Include="Database\PositionTable.cs" />
+    <Compile Include="Database\SICTable.cs" />
     <Compile Include="DataTransfer\ApplicationFieldData.cs" />
     <Compile Include="DataAccess\ApplicationProvider.cs" />
     <Compile Include="DataAccess\CityProvider.cs" />
@@ -96,10 +140,17 @@
     <Compile Include="DataTransfer\ApplicationFileData.cs" />
     <Compile Include="DataTransfer\ApplicationLogData.cs" />
     <Compile Include="DataTransfer\ApplicationLogDetailDiffData.cs" />
+    <Compile Include="DataTransfer\CompanyData.cs" />
+    <Compile Include="DataTransfer\ContractTypeData.cs" />
+    <Compile Include="DataTransfer\CorporateEntityTypeData.cs" />
+    <Compile Include="DataTransfer\CorporateSizeData.cs" />
+    <Compile Include="DataTransfer\CorporateStatusData.cs" />
+    <Compile Include="DataTransfer\EducationData.cs" />
     <Compile Include="DataTransfer\FieldData.cs" />
     <Compile Include="DataTransfer\CityData.cs" />
     <Compile Include="DataTransfer\CustomerClassData.cs" />
     <Compile Include="DataTransfer\CountryData.cs" />
+    <Compile Include="DataTransfer\HomeOwnershipData.cs" />
     <Compile Include="DataTransfer\LanguageData.cs" />
     <Compile Include="DataAccess\PolicyProvider.cs" />
     <Compile Include="Database\ApplicationTypeTable.cs" />
@@ -107,7 +158,11 @@
     <Compile Include="Database\PolicyTable.cs" />
     <Compile Include="DataTransfer\ApplicationTypeData.cs" />
     <Compile Include="DataTransfer\IdentityTypeData.cs" />
+    <Compile Include="DataTransfer\MaritalStatusData.cs" />
+    <Compile Include="DataTransfer\OccupationData.cs" />
     <Compile Include="DataTransfer\PolicyData.cs" />
+    <Compile Include="DataTransfer\PositionData.cs" />
+    <Compile Include="DataTransfer\SICData.cs" />
     <Compile Include="DataTransfer\StateData.cs" />
     <Compile Include="Enum\ApplicationFieldNameEnum.cs" />
     <Compile Include="Enum\ApplicationFieldTypeEnum.cs" />
